--- a/source/app/webroot/css/style.css
+++ b/source/app/webroot/css/style.css
@@ -1,13 +1,13 @@
-﻿body {
+body {
 	margin:0px;
 	padding:0px;
 	background:white;
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 11px;
+	font-size: 81%;
 }
 input, option, select, textarea, button, table td, table th {
-	font-size: 11px;
+	font-size: 100%;
 }
 
 a, ul, li, form, div, h1, h2, h3, p {
@@ -34,7 +34,7 @@ h1 {
 	margin-top: 15px;
 	background: url("./images/h1.gif") transparent no-repeat left;
 	padding-left: 30px;
-	font-size: 14px;
+	font-size: 120%;
 	font-weight: bold;
 	color: #0090BC;
 }
@@ -42,7 +42,7 @@ h1 {
 h2 {
 	margin-top: 15px;
 	border-bottom: 1px dashed #86BECD;
-	font-size: 13px;
+	font-size: 110%;
 	font-weight: bold;
 	color: #0090BC;
 }
@@ -50,7 +50,7 @@ h2 {
 h3 {
 	margin-top: 25px;
 	border-bottom: 1px dotted #86BECD;
-	font-size: 12px;
+	font-size: 110%;
 	font-weight: bold;
 	color: #0090BC;
 }
@@ -123,7 +123,7 @@ table td {
 
 .boxtitle {
 	color: white;
-	font-size: 12px;
+	font-size: 110%;
 	font-weight: bold;
 	text-align: left;
 	padding-left: 45px;
@@ -166,7 +166,7 @@ table td {
 	vertical-align: middle;
 	border-top: 1px #DEDEDE solid;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 11px;
+	font-size: 100%px;
 	height: 18px;
 	display: block; 
 	background: url("./images/menuitem.gif") no-repeat 0px 9px;
@@ -180,7 +180,7 @@ table td {
 	vertical-align: middle;
 	border-bottom: 1px #DEDEDE solid;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 11px;
+	font-size: 100%;
 	height: 18px;
 	display: block; 
 	background: url("./images/menuitem.gif") no-repeat 0px 9px;
@@ -207,7 +207,7 @@ table td {
 	margin: 0px 0px 0px 15px;
 	padding: 0px;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 11px;
+	font-size: 100%;
 	color: #5E5E5E;
 }
 
@@ -293,7 +293,7 @@ table td {
 	heigh: 35px;
 	width: 187px;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 11px;
+	font-size: 100%;
 	color: #5E5E5E;
 }
 
@@ -365,7 +365,7 @@ table td {
 }
 
 #path {
-	font-size: 11px;
+	font-size: 100%;
 	font-family: Arial, Helvetica, sans-serif;
 	float: left;
 	padding: 0px;
@@ -373,7 +373,7 @@ table td {
 }
 
 #sizer {
-	font-size: 11px;
+	font-size: 100%;
 	font-family: Arial, Helvetica, sans-serif;
 	float: right;
 	padding: 0px;
@@ -424,7 +424,7 @@ table td {
 	padding: 4px 15px 15px 20px;
 	text-align: justify;
 	border-right: #0090BC 2px solid;
-	font-size: 11px;
+	font-size: 100%;
 }
 
 #bottom {
@@ -448,7 +448,7 @@ table td {
 	padding: 3px 18px 0px 0px;
 	margin: 0px;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10px;
+	font-size: 90%;
 }
 
 #footertext a {
