--- a/source/app/webroot/css/style.css
+++ b/source/app/webroot/css/style.css
@@ -166,7 +166,7 @@ table td {
 	vertical-align: middle;
 	border-top: 1px #DEDEDE solid;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 100%px;
+	font-size: 100%;
 	height: 18px;
 	display: block; 
 	background: url("./images/menuitem.gif") no-repeat 0px 9px;
