--- a/source/app/webroot/css/style.css
+++ b/source/app/webroot/css/style.css
@@ -296,7 +296,7 @@ table td {
 	float: left;
 	margin: 0px;
 	padding: 8px 5px 0px 8px;
-	heigh: 35px;
+	height: auto;
 	width: 187px;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
