opravy bugov reportovanych timom 12

--- a/source/app/webroot/css/style.css
+++ b/source/app/webroot/css/style.css
@@ -661,7 +661,7 @@ a.btn {
   display: block;
   clear: right;
 }
-div.profession input, select {
+div.profession input, div.profession select {
   float: left;
   width: 120px;
 }
