--- a/source/app/webroot/css/style.css
+++ b/source/app/webroot/css/style.css
@@ -613,6 +613,7 @@ p.myprofile {
 	background-color: #DEF1F8;
 	border-top: 1px solid #86BECD;
 	border-bottom: 1px solid #86BECD;
+	overflow/**/: auto;
 }
 div.myprofile {
 	padding-left: 17px;
@@ -620,6 +621,7 @@ div.myprofile {
 	background-color: #DEF1F8;
 	border-top: 1px solid #86BECD;
 	border-bottom: 1px solid #86BECD;
+	overflow/**/: auto;
 }
 div.myprofile h3 {
   margin-bottom: 10px
