- oprava vyhladavania v module alumni - doplnenie usporiadanie riadkov tabulky do vsetkych relevantnych modulov - drobné opravy ako layout a prekaldy - upravený dump - opravený chybný znak, konvertované do UTF-8

--- a/source/app/webroot/css/style.css
+++ b/source/app/webroot/css/style.css
@@ -90,6 +90,14 @@ table td {
 	padding: 0 0.2em 0 0.2em;
 }
 
+th a {
+  color: white !important;
+}
+
+th a:hover, th a:active {
+  color: black !important;
+}
+
 .clear {
 	clear: both;
 	font-size: 0px;
